[gd_scene load_steps=9 format=2]

[ext_resource path="res://mianFunction/searchCat/searchCat.gd" type="Script" id=1]
[ext_resource path="res://addons/godot_table/Table.gd" type="Script" id=2]
[ext_resource path="res://MiSans/MiSans-Normal.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://mianFunction/allCatInfo/popup_cat_detail.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[node name="Control" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.298039, 0.298039, 0.298039, 1 )

[node name="Table" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -998.0
margin_bottom = -574.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 2 )
column_headers = [ "猫咪编号", "名字", "性别", "种类", "颜色", "描述" ]

[node name="Button" type="Button" parent="."]
margin_left = 690.0
margin_top = 517.0
margin_right = 810.0
margin_bottom = 567.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
text = "返回"

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 22.0
text = "提示：点击表格可展开猫咪信息"
align = 1
valign = 1

[node name="popup_cat_detail" parent="." instance=ExtResource( 4 )]
margin_left = 6.0
margin_top = 102.0
margin_right = -581.0
margin_bottom = -182.0

[node name="searchContent" type="LineEdit" parent="."]
margin_left = 101.0
margin_top = 50.0
margin_right = 630.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 4 )
placeholder_text = "请输入您想要查找的猫咪编号或名称"
caret_blink = true
caret_blink_speed = 0.5

[node name="searchButton" type="Button" parent="."]
margin_left = 654.0
margin_top = 55.0
margin_right = 774.0
margin_bottom = 105.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 5 )
text = "搜索"

[connection signal="CLICK_ROW" from="Table" to="." method="_on_Table_CLICK_ROW"]
[connection signal="resized" from="Table" to="." method="_on_Table_resized"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="searchButton" to="." method="_on_searchButton_pressed"]
